# SingletonSystem

./: CMakeLists.txt  CMakePresets.json
common/: CMakeLists.txt
common/include/: common_global.h
common/include/singleton/: singleton.h  singleton_registry.h
common/include/transport/: object_transport_proxy.h
common/src/singleton/: singleton.cpp
common/src/transport/: object_transport_proxy.cpp
example/: CMakeLists.txt
example/singleton_test/: CMakeLists.txt  main.cpp  singleton_system.h
example/singleton_test/test_lib_1/: CMakeLists.txt  main.cpp  test_lib_1_global.h  test_lib_1_header.h
example/singleton_test/test_lib_2/: CMakeLists.txt  main.cpp  test_lib_2_global.h  test_lib_2_header.h
